fixed 1px gap for decortive ::after element of advantages block

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -32,8 +32,6 @@
 }
 
 .advantages__item{
-    // display: block;
-
     width: 320px;
     min-height: 355px;
     box-sizing: border-box;
@@ -67,7 +65,6 @@
     font-size: 30px;
     line-height: 30px;
     text-transform: uppercase;
-    // font-weight: bold;
 }
 
 .advantages__description{
@@ -76,9 +73,6 @@
     font-size: 20px;
     line-height: 26px;
 }
-
-
-
 
 @media (min-width: @tablet-width){
     .advantages{
@@ -134,14 +128,10 @@
         }
     }
 
-    
-
     .advantages__title{
         text-align: start;
         margin-bottom: 10px;
     }
-
-
 
     .advantages__toggles{
         display: none;
@@ -180,7 +170,7 @@
     
         &::after{
             left: -120px; //(1200-960)/2=120
-            bottom: -65px;
+            bottom: -64px;
     
             border: 600px solid transparent;
             border-top: 65px solid #353535; 
